03_ssl/dns-ssl-kube-lego/echo/3-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-backend
  namespace: echo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo-backend
    spec:
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=8080",
          "--backend=127.0.0.1:8081",
          "--service=apimarket.nubentos.com",
          "--version=2018-06-02r0",  # eg. 2013-12-31r0
          "--healthz=healthz",
        ]
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 20
          timeoutSeconds: 1
      - name: echo
        image: gcr.io/endpoints-release/echo:latest
        ports:
          - containerPort: 8081
