03_ssl/dns-ssl-kube-lego/echo/1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: echo
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - "apimarket.nubentos.es"
    secretName: echo-tls
  rules:
  - host: "apimarket.nubentos.es"
    http:
      paths:
      - path: /*
        backend:
          serviceName: echo-service
          servicePort: 80
